--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
-./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-./mvnw test -B
+script: ./mvnw: install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+script: ./mvnw test -B
